--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
 
 html {
-  scroll-behavior: smooth;
+  scroll-behavior: auto;
+  overscroll-behavior: none;
+  overflow: hidden;
+  height: 100%;
 }
 body {
   margin: 0;
@@ -13,7 +16,10 @@ body {
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
   /* background-color: #ffffff; */
+  overflow: auto;
+  height: 100%;
 }
 
 code {
@@ -253,6 +259,6 @@ section {
   }
 }
 
-.shadow-text{
+.shadow-text {
   text-shadow: 0px 3px 6px #00000082;
 }
