--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,9 +5,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
 
 html {
-  scroll-behavior: auto;
-  overscroll-behavior: none;
-  overflow: hidden;
+  scroll-behavior: smooth;
+  /* overscroll-behavior: none; */
+  /* overflow: hidden; */
   height: 100%;
 }
 body {
